[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu_hud.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Forum-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://default_theme.tres" type="Theme" id=3]
[ext_resource path="res://tablet.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 92
extra_spacing_bottom = -20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
extra_spacing_char = 8
font_data = ExtResource( 2 )

[node name="menu_hud" type="Control" groups=[
"hud",
]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_right = 450.0
margin_bottom = 120.0

[node name="LabelGameName" type="Label" parent="VBoxContainer"]
margin_right = 440.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "PALLADIUM"

[node name="LabelGameSubname" type="Label" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 440.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
text = "ADVENTURE IN GREECE"

[node name="LabelVersion" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 3 )
text = "v. 1.0"
align = 2
valign = 2

[node name="Dimmer" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.140625, 0.140625, 0.140625, 0.901961 )

[node name="tablet" parent="." instance=ExtResource( 4 )]
visible = false

[node name="QuitDialog" type="ConfirmationDialog" parent="."]
pause_mode = 2
margin_right = 274.0
margin_bottom = 102.0
popup_exclusive = true
dialog_text = "Are you sure?"
[connection signal="about_to_show" from="QuitDialog" to="." method="_on_QuitDialog_about_to_show"]
[connection signal="confirmed" from="QuitDialog" to="." method="_on_QuitDialog_confirmed"]
[connection signal="popup_hide" from="QuitDialog" to="." method="_on_QuitDialog_popup_hide"]
